Rewrite using aws stuff

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "target": "es5",
       "module": "commonjs",
       "moduleResolution": "node",
-      "outDir": "./build",
+      "outDir": "./build/src",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "sourceMap": true,
