--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
       "@types/express": "^4.16.1",
-      "@types/node": "^10.9.0",
+      "@types/node": "^11.9.5",
       "ts-node": "^8.0.2",
       "tslint": "^5.12.1",
       "tslint-config-prettier": "^1.18.0",
@@ -13,6 +13,7 @@
    },
    "dependencies": {
       "@types/web3": "^1.0.18",
+      "aws-sdk": "^2.409.0",
       "body-parser": "^1.18.1",
       "express": "^4.15.4",
       "leap-core": "^0.28.0",
@@ -21,7 +22,12 @@
       "typeorm": "0.2.13",
       "web3": "^1.0.0-beta.33"
    },
+   "main": "src/index.js",
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "build": "yarn build:init && yarn build:ts && yarn build:install",
+      "build:init": "rm -rf build && mkdir build",
+      "build:ts": "tsc",
+      "build:install": "cp package.json yarn.lock build/ && cd build && yarn --production"
    }
 }
