--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
    },
    "main": "src/index.js",
    "scripts": {
+      "package": "yarn build && yarn package:pack",
+      "package:pack": "cd build && zip -r ../lambda.zip * && cd ..",
       "start": "ts-node src/index.ts",
       "build": "yarn build:init && yarn build:ts && yarn build:install",
       "build:init": "rm -rf build && mkdir build",
