--- a/package.json
+++ b/package.json
@@ -2,27 +2,23 @@
    "name": "leap_tx_store",
    "version": "0.0.1",
    "devDependencies": {
-      "@types/node": "^11.9.5",
-      "ts-node": "^8.0.2",
-      "tslint": "^5.12.1",
-      "tslint-config-prettier": "^1.18.0",
-      "tslint-config-standard": "^8.0.1",
-      "typescript": "^3.3.3"
+      "@babel/cli": "^7.2.3",
+      "@babel/core": "^7.3.4",
+      "@babel/preset-env": "^7.3.4"
    },
    "dependencies": {
-      "@types/web3": "^1.0.18",
       "aws-sdk": "^2.409.0",
       "leap-core": "^0.28.0",
-      "web3": "^1.0.0-beta.33"
+      "web3": "0.20"
    },
    "main": "src/index.js",
    "scripts": {
       "package": "yarn build && yarn package:pack",
       "package:pack": "cd build && zip -r ../lambda.zip * && cd ..",
       "start": "ts-node src/index.ts",
-      "build": "yarn build:init && yarn build:ts && yarn build:install",
-      "build:init": "rm -rf build && mkdir build",
-      "build:ts": "tsc",
+      "build": "yarn build:init && yarn build:js && yarn build:install",
+      "build:init": "rm -rf build && mkdir -p build/src",
+      "build:js": "babel src --out-dir build/src",
       "build:install": "cp package.json yarn.lock build/ && cd build && yarn --production"
    }
 }
